[package]
name = "smoothd"
version = "0.1.0"
authors = ["Adrien Czerny <adrien.czerny@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Runtime
tokio = { version = "0.2", features = ["full"] }

# HTTP
hyper = { version = "0.13.8" }
